--- a/Yoserusu/Yoserusu.vcxproj.filters
+++ b/Yoserusu/Yoserusu.vcxproj.filters
@@ -1,48 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Game">
-      <UniqueIdentifier>{0b02da88-75f2-45bc-848e-29acb55ccece}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Sequence">
-      <UniqueIdentifier>{be76c8d1-334b-437d-b08a-3d03f33f1ee9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Sequence\Game">
-      <UniqueIdentifier>{4be0c29c-292f-434b-8c66-7e63f72b2b8d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Util">
-      <UniqueIdentifier>{292661e6-9131-4bfb-97c2-9228eb2ac4b2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Lua">
-      <UniqueIdentifier>{9477e740-4cc1-40e1-bee0-980ca332021d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Lua\Luabind">
-      <UniqueIdentifier>{bf59487b-2fec-4a0a-9394-1073124e641f}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Sequence\AutheScene.cpp">
-      <Filter>Sequence</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Parent.cpp">
-      <Filter>Sequence</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Title.cpp">
-      <Filter>Sequence</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Game\Loading.cpp">
-      <Filter>Sequence\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Game\ParentGame.cpp">
-      <Filter>Sequence\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Game\Play.cpp">
-      <Filter>Sequence\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Sequence\Game\Result.cpp">
-      <Filter>Sequence\Game</Filter>
-    </ClCompile>
     <ClCompile Include="Util\DataBase.cpp">
       <Filter>Util</Filter>
     </ClCompile>
@@ -55,10 +14,22 @@
     <ClCompile Include="Util\SoundManager.cpp">
       <Filter>Util</Filter>
     </ClCompile>
+    <ClCompile Include="Util\Sprite.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Timer.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Wall.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
     <ClCompile Include="Game\ArmLeft.cpp">
       <Filter>Game</Filter>
     </ClCompile>
     <ClCompile Include="Game\ArmRight.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Authe.cpp">
       <Filter>Game</Filter>
     </ClCompile>
     <ClCompile Include="Game\BackGround.cpp">
@@ -75,21 +46,6 @@
     </ClCompile>
     <ClCompile Include="Game\State.cpp">
       <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Game\Timer.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Game\Wall.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Game\Authe.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Lua\LuaManager.cpp">
-      <Filter>Lua</Filter>
-    </ClCompile>
-    <ClCompile Include="Util\Sprite.cpp">
-      <Filter>Util</Filter>
     </ClCompile>
     <ClCompile Include="Lua\Luabind\class.cpp">
       <Filter>Lua\Luabind</Filter>
@@ -142,8 +98,115 @@
     <ClCompile Include="Lua\Luabind\wrapper_base.cpp">
       <Filter>Lua\Luabind</Filter>
     </ClCompile>
+    <ClCompile Include="Lua\LuaManager.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\AutheScene.cpp">
+      <Filter>Sequence</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Parent.cpp">
+      <Filter>Sequence</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Title.cpp">
+      <Filter>Sequence</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Game\Loading.cpp">
+      <Filter>Sequence\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Game\ParentGame.cpp">
+      <Filter>Sequence\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Game\Play.cpp">
+      <Filter>Sequence\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Sequence\Game\Result.cpp">
+      <Filter>Sequence\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <Filter Include="Game">
+      <UniqueIdentifier>{05bbd4f7-dc51-474f-ad3b-c8480fafc60b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Lua">
+      <UniqueIdentifier>{9dfa8f48-75ae-4938-b632-1e1b0d09b383}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sequence">
+      <UniqueIdentifier>{b9a1fd05-7926-4802-82b8-f73cd600a64b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Util">
+      <UniqueIdentifier>{44f058d6-f532-41eb-9753-80bf73b81e94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Lua\Luabind">
+      <UniqueIdentifier>{a79b2591-f3cc-4762-afb0-e87cf2a5c731}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sequence\Game">
+      <UniqueIdentifier>{daeb34c6-7c1c-429e-a56a-b3b716fac767}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader">
+      <UniqueIdentifier>{a1d88182-6993-425f-a358-e3e65302d6cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader\hlsl">
+      <UniqueIdentifier>{7ac2edb4-0708-4a08-b801-d5e61891a1cd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader\include">
+      <UniqueIdentifier>{8d27c311-c5c8-4546-b1c2-90241a2e70a5}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Util\DataBase.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\DepthSingleton.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\ModelLoader.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\SoundManager.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Sprite.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Timer.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Wall.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Arm.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\ArmLeft.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\ArmRight.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Authe.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\BackGround.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Ball.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Enum.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\LockOn.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Score.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\State.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Lua\LuaManager.h">
+      <Filter>Lua</Filter>
+    </ClInclude>
     <ClInclude Include="Sequence\AutheScene.h">
       <Filter>Sequence</Filter>
     </ClInclude>
@@ -171,59 +234,19 @@
     <ClInclude Include="Sequence\Game\Result.h">
       <Filter>Sequence\Game</Filter>
     </ClInclude>
-    <ClInclude Include="Util\DataBase.h">
-      <Filter>Util</Filter>
+    <ClInclude Include="Shader\include\ShaderBase.h">
+      <Filter>Shader\include</Filter>
     </ClInclude>
-    <ClInclude Include="Util\DepthSingleton.h">
-      <Filter>Util</Filter>
+    <ClInclude Include="Shader\include\CocTrans.h">
+      <Filter>Shader\include</Filter>
     </ClInclude>
-    <ClInclude Include="Util\ModelLoader.h">
-      <Filter>Util</Filter>
-    </ClInclude>
-    <ClInclude Include="Util\SoundManager.h">
-      <Filter>Util</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Arm.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\ArmLeft.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\ArmRight.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\BackGround.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Ball.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Enum.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\LockOn.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Score.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\State.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Timer.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Wall.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\Authe.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Lua\LuaManager.h">
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lua\Authe.lua">
       <Filter>Lua</Filter>
-    </ClInclude>
-    <ClInclude Include="Util\Sprite.h">
-      <Filter>Util</Filter>
-    </ClInclude>
+    </None>
+    <None Include="Shader\hlsl\CocTrans.fx">
+      <Filter>Shader\hlsl</Filter>
+    </None>
   </ItemGroup>
 </Project>
